--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -20,6 +20,5 @@ jobs:
       run: swift build -v
     - name: Run tests
       run: swift test -v --enable-code-coverage
-    - name: Coverage
-      run: make coverage
-
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v3
