--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -20,5 +20,7 @@ jobs:
       run: swift build -v
     - name: Run tests
       run: swift test -v --enable-code-coverage
+    - name: Generate coverage report
+      run: xcrun llvm-cov export -format="lcov" .build/debug/LeetCodeProblemsPackageTests.xctest/Contents/MacOS/LeetCodeProblemsPackageTests -instr-profile .build/debug/codecov/default.profdata > info.lcov
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
